fix: [RGOeX-647] remove additional footer padding on mobile

--- a/paragon/blocks/_footer.scss
+++ b/paragon/blocks/_footer.scss
@@ -5,10 +5,6 @@ footer.footer {
     border-top: 1px solid #c5c6c7;
     box-shadow: 0 0 5px 0 rgb($black, .10);
 
-    @include media-breakpoint-down(md) {
-        padding: 42px 0;
-    }
-
     .holder {
         max-width: $container-width;
         padding: 0 15px;
